--- a/learn/try/arthist.html
+++ b/learn/try/arthist.html
@@ -13,7 +13,7 @@
   <div id="result"></div>
 
   <script>
-    const accessToken = "BQA0xjh2G-63hvaIboZD07bZYnpTmIxHB-r4UdqCLfH_rCHYfqROTe_Le5nnawGD-fB0Xnj4uOn-pOJdkZtmlBDJUXFDf8CYTnOvkXxlxGmQ8dV4GZoN4LgEJ43M8R7CA0ip3FBZBdU";  // ← 有効なアクセストークンをここに貼り付ける
+    const accessToken = "yourapikey";  // ← 有効なアクセストークンをここに貼り付ける
 
     document.getElementById("searchBtn").addEventListener("click", () => {
       const query = document.getElementById("searchInput").value.trim();
