--- a/learn/try/track.html
+++ b/learn/try/track.html
@@ -13,7 +13,7 @@
   <div id="result"></div>
 
   <script>
-    const accessToken = "BQA0xjh2G-63hvaIboZD07bZYnpTmIxHB-r4UdqCLfH_rCHYfqROTe_Le5nnawGD-fB0Xnj4uOn-pOJdkZtmlBDJUXFDf8CYTnOvkXxlxGmQ8dV4GZoN4LgEJ43M8R7CA0ip3FBZBdU";  // ← 有効なアクセストークンをここに
+    const accessToken = "BQArYIiHeh_-IKbkak3hm8Eqc5JyISZ9F_3ct5T90FlaS_GO4CE3YDCEZebmfJ0v1KdnD6QUSrBKqECe8WUbq5ibFeFydrkTujXZ3GMM4ufvVFuYXe-rEtCQC3yxOtBt-J16cywZIzo";  // ← 有効なアクセストークンをここに
 
     document.getElementById("searchBtn").addEventListener("click", () => {
       const query = document.getElementById("searchInput").value.trim();
@@ -56,6 +56,12 @@
         console.error(err);
         document.getElementById("result").textContent = "検索に失敗しました。アクセストークンを確認してください。";
       });
+    });
+
+    document.getElementById("searchInput").addEventListener("keydown", (event) => {
+    if (event.key === "Enter") {
+      document.getElementById("searchBtn").click();
+    }
     });
   </script>
 </body>
