やばいことした

--- a/learn/try/track.html
+++ b/learn/try/track.html
@@ -13,7 +13,7 @@
   <div id="result"></div>
 
   <script>
-    const accessToken = "BQBYof-3iH6buJrpNW0cfpZOrJC1neDh-8ID9ZxyM3H_8QshdgN1isshCNC2j6osg9hVvczea8eNGHROxIeI5RMSCI-dPCn7AeDSkMzeMuICg_7-aeAa_Q94_1Da6DkoQkQXkOEzjLE";  // ← 有効なアクセストークンをここに
+    const accessToken = "";  // ← 有効なアクセストークンをここに
 
     document.getElementById("searchBtn").addEventListener("click", () => {
       const query = document.getElementById("searchInput").value.trim();
